# nepremicnine.net

./: .env.example  .gitignore  AGENTS.md  PRD.md  Progress.md  README.md  pyproject.toml  search_sources.example.json
docs/superpowers/plans/: 2026-07-04-nepremicnine-mvp.md  2026-07-06-raw-snapshots-text-facts.md  2026-07-06-seller-filter-and-search-sources.md  2026-07-06-telegram-bot-listing-workflow.md  2026-07-06-telegram-chat-filters.md
docs/superpowers/specs/: 2026-07-04-nepremicnine-mvp-design.md  2026-07-06-raw-snapshots-text-facts-design.md  2026-07-06-seller-filter-and-search-sources-design.md  2026-07-06-telegram-bot-ui-design.md
scripts/: audit.ps1  check-session.ps1  debug-browser.ps1  diagnose-headed-proxy.ps1  diagnose-manual-nav.ps1  export-search-details.ps1  install-poll-task.ps1  poll.ps1  run-daily-poll-hidden.vbs  run-daily-poll.ps1  uninstall-poll-task.ps1  warm-browser.ps1
src/nepremicnine_bot/: __init__.py  bot.py  classifier.py  cli.py  config.py  fetcher.py  models.py  notifier.py  parser.py  runner.py  storage.py
tests/: conftest.py  test_bot.py  test_classifier.py  test_config.py  test_fetcher.py  test_parser.py  test_runner.py  test_storage.py
tests/fixtures/: listing_agency.html  listing_private.html  search_results.html
